--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### properties ###
+**/application.properties
+
 ### Eclipse ###
 .metadata
 bin/
