--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### uploads ###
+uploads/
+
 ### properties ###
 **/application.properties
 
